major ui changes

--- a/index.html
+++ b/index.html
@@ -6,29 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compitible" content="ie=edge">
     <meta name="description" content="this is my website (project 2) :-D ">
-    <title>Mk_Project 2</title>
+    <title>Mann's Garrage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
+        <div class="left">
+            left
+        </div>
         <nav class="navbar">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact us</a></li>
-                <div>
-                    <input type="search" name="search" class="search" placeholder="Search this Website">
-                </div>
             </ul>
         </nav>
+
+        <div class="right">
+            right
+        </div>
     </header>
     
     <div class="m">
         <img src="icons8-harry-potter.svg"></img>
-        <h3>Harry Potter</h3>
     </div>
+
+
 </body>
 
 </html>
