--- a/index.html
+++ b/index.html
@@ -8,26 +8,49 @@
     <meta name="description" content="this is my website (project 2) :-D ">
     <title>Mann's Garrage</title>
     <link rel="stylesheet" href="style.css">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet"> -->
 </head>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&display=swap" rel="stylesheet">
 
 <body>
     <header>
         <div class="left">
-            left
+            <img src="race-car.png" alt="logo"></img>
+            <div>MK's Garrage</div> 
         </div>
         <nav class="navbar">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">About us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact us</a></li>
             </ul>
         </nav>
 
         <div class="right">
-            right
+            <button class="btn">Call us now</button>
+            <button class="btn">Email us</button>
         </div>
     </header>
+
+    <div class="container">
+        <h1>One Stop Destination for your DREAM CAR</h1>
+        <form action="noaction.php">
+            <div class="form-grp">
+                <input type="text" name="" placeholder="Enter Your Name">
+            </div>
+            <div class="form-grp">
+                <input type="text" name="" placeholder="Enter Your AGE">
+            </div>
+            <div class="form-grp">
+                <input type="text" name="" placeholder="Enter Your Gender">
+            </div>
+            <div class="form-grp">
+                <input type="text" name="" placeholder="Enter Your Locality">
+            </div>
+                <button class="btn">Submit</button>
+        </form>
+    </div>
     
     <div class="m">
         <img src="icons8-harry-potter.svg"></img>
