--- a/index.html
+++ b/index.html
@@ -40,15 +40,24 @@
                 <input type="text" name="" placeholder="Enter Your Name">
             </div>
             <div class="form-grp">
-                <input type="text" name="" placeholder="Enter Your AGE">
+                <input type="number" name="" placeholder="Enter Your AGE">
             </div>
             <div class="form-grp">
-                <input type="text" name="" placeholder="Enter Your Gender">
+                <input type="text" name="" placeholder="Enter Your Address">
             </div>
             <div class="form-grp">
-                <input type="text" name="" placeholder="Enter Your Locality">
+                <input type="email" name="" placeholder="Enter Your Email">
             </div>
-                <button class="btn">Submit</button>
+            <div class="form-grp">
+                <input type="number" name="" placeholder="Enter Your Phone Number">
+            </div>
+            <div class="form-grp">
+                <input type="text" name="" placeholder="Enter Your Car Details">
+            </div>
+            <DIV class="button">
+                <button class="btn" type="submit">Submit</button>
+                <button class="btn" type="reset">Reset</button>
+            </DIV>
         </form>
     </div>
     
